refactor burger-menu

--- a/src/html/pages/home-page/_design-production.html
+++ b/src/html/pages/home-page/_design-production.html
@@ -20,7 +20,7 @@
         </div>
         <button class="design-production__button button button--accent" type="button">
             Получить дизайн проект
-            <svg>
+            <svg aria-hidden>
                 <use xlink:href="img/sprite.svg#arrows-double">
             </svg>
         </button>
