--- a/src/html/pages/home-page/_media.html
+++ b/src/html/pages/home-page/_media.html
@@ -1,5 +1,5 @@
 <section class="media section">
-    <h2 class="media__title title">
+    <h2 class="title">
         СМИ о нас
     </h2>
     <ul class="media__items">
