--- a/src/html/pages/product-page/_facade-colors.html
+++ b/src/html/pages/product-page/_facade-colors.html
@@ -5,7 +5,7 @@
             Вариации фасадов
         </div>
     </div>
-    <h2 class="facade-colors__title title">
+    <h2 class="title">
         Цвета фасадов для кухни
     </h2>
     <ul class="facade-colors__items">
