--- a/src/html/pages/product-page/_product-about.html
+++ b/src/html/pages/product-page/_product-about.html
@@ -36,7 +36,7 @@
     <div class="product-about__swiper swiper">
         <ul class="product-about__items swiper-wrapper">
             <li class="product-about__item swiper-slide">
-                <a class="product-about__image" href="#">
+                <a class="product-about__image" href="img/blocks/product-about/1.jpg" data-fancybox="product-about-gallery">
                     <picture>
                         <source srcset="img/blocks/product-about/1.avif" type="image/avif">
                         <source srcset="img/blocks/product-about/1.webp" type="image/webp">
@@ -45,7 +45,7 @@
                 </a>
             </li>
             <li class="product-about__item swiper-slide">
-                <a class="product-about__image" href="#">
+                <a class="product-about__image" href="img/blocks/product-about/2.jpg" data-fancybox="product-about-gallery">
                     <picture>
                         <source srcset="img/blocks/product-about/2.avif" type="image/avif">
                         <source srcset="img/blocks/product-about/2.webp" type="image/webp">
@@ -54,7 +54,7 @@
                 </a>
             </li>
             <li class="product-about__item swiper-slide">
-                <a class="product-about__image" href="#">
+                <a class="product-about__image" href="img/blocks/product-about/1.jpg" data-fancybox="product-about-gallery">
                     <picture>
                         <source srcset="img/blocks/product-about/1.avif" type="image/avif">
                         <source srcset="img/blocks/product-about/1.webp" type="image/webp">
@@ -63,7 +63,7 @@
                 </a>
             </li>
             <li class="product-about__item swiper-slide">
-                <a class="product-about__image" href="#">
+                <a class="product-about__image" href="img/blocks/product-about/2.jpg" data-fancybox="product-about-gallery">
                     <picture>
                         <source srcset="img/blocks/product-about/2.avif" type="image/avif">
                         <source srcset="img/blocks/product-about/2.webp" type="image/webp">
