--- a/src/html/pages/product-page/_product-characteristics.html
+++ b/src/html/pages/product-page/_product-characteristics.html
@@ -20,7 +20,7 @@
                             <div class="characteristic-card__item">
                                 <button class="characteristic-card__value" type="button" data-tippy-content>
                                     Экошпон
-                                    <svg>
+                                    <svg aria-hidden>
                                         <use xlink:href="img/sprite.svg#question">
                                     </svg>
                                 </button>
@@ -56,7 +56,7 @@
                             <div class="characteristic-card__item">
                                 <button class="characteristic-card__value" type="button" data-tippy-content>
                                     Фрезеровка
-                                    <svg>
+                                    <svg aria-hidden>
                                         <use xlink:href="img/sprite.svg#question">
                                     </svg>
                                 </button>
@@ -78,7 +78,7 @@
                             <div class="characteristic-card__item">
                                 <button class="characteristic-card__value" type="button" data-tippy-content>
                                     Минимализм
-                                    <svg>
+                                    <svg aria-hidden>
                                         <use xlink:href="img/sprite.svg#question">
                                     </svg>
                                 </button>
@@ -91,7 +91,7 @@
                             <div class="characteristic-card__item">
                                 <button class="characteristic-card__value" type="button" data-tippy-content>
                                     Лофт
-                                    <svg>
+                                    <svg aria-hidden>
                                         <use xlink:href="img/sprite.svg#question">
                                     </svg>
                                 </button>
