--- a/src/html/pages/product-page/_quality-materials.html
+++ b/src/html/pages/product-page/_quality-materials.html
@@ -11,7 +11,7 @@
     <div class="quality-materials__content" data-tippy-parent>
         <ul class="quality-materials__items quality-materials__items--desktop">
             <li class="quality-materials__item" style="top: 12%; left: 44%;">
-                <button class="quality-materials__button" type="button" data-interactive-tippy-content>
+                <button class="quality-materials__button" type="button" data-tippy-content>
                     <span class="sr-only">Толщина корпуса</span>
                 </button>
                 <div class="quality-materials__tooltip tooltip">
@@ -26,7 +26,7 @@
                 </div>
             </li>
             <li class="quality-materials__item" style="top: 48%; left: 15%;">
-                <button class="quality-materials__button" type="button" data-interactive-tippy-content>
+                <button class="quality-materials__button" type="button" data-tippy-content>
                     <span class="sr-only">Система крепления</span>
                 </button>
                 <div class="quality-materials__tooltip tooltip">
@@ -41,7 +41,7 @@
                 </div>
             </li>
             <li class="quality-materials__item" style="top: 64%; left: 45%;">
-                <button class="quality-materials__button" type="button" data-interactive-tippy-content>
+                <button class="quality-materials__button" type="button" data-tippy-content>
                     <span class="sr-only">Стандарты</span>
                 </button>
                 <div class="quality-materials__tooltip tooltip">
@@ -56,7 +56,7 @@
                 </div>
             </li>
             <li class="quality-materials__item" style="top: 72%; left: 78%;">
-                <button class="quality-materials__button" type="button" data-interactive-tippy-content>
+                <button class="quality-materials__button" type="button" data-tippy-content>
                     <span class="sr-only">Толщина корпуса</span>
                 </button>
                 <div class="quality-materials__tooltip tooltip">
