--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,27 +7,23 @@
 })
 
 <!-- TODO: aria: 
- 2) связь в спойлере;
- 3) в модалке кнопка (непонято для чего); 
- 4) в хедере при hover выпадает меню; 
- 5) focus active для всех добавить; 
- 7) не удаляется aria-selected в блоге;
- 8) сделать так, чтобы лишние скрипты не работали на мобилках
- 9) дизейбл кнопок (стрелок) в табах
- 10) в логике convenience не нравится, что использую setTimeout. Нужно попробовать отрисовывать точки внутри класса
- 11) не нравится, что фон задаю  и хедеру и header__navigation
- 13) ломается бургер
- 14) fixedHeader, changeColorSideMenu учитывать, что высота экрана может меняться
- 15) fixedHeader, changeColorSideMenu оптимизация 
- 17) проверить хлебные крошки и мобильное меню на переполнение
- 18) ругается stylelint
- 19) размытые картинки
- 20) чтобы на одном разрешение у всех слайдеров убирались стрелки
- 21) попробовать controls позиционирвоать не на абсолюте + в слайдере постараться не дублировать стили (сделать примерно как в других решениях на странице товара)
- 22) проверить width и height атрибуты для картинок, чтобы соответствовали фактическим размерам на 1920
- 24) ДЛЯ product-projects и другие решения сделать что-то, чтобы не дублировать стили
- 26) unique-quality и guarantee-block что-то придумать, чтобы не дублирвать стили
- 27) сделать какой-то класс или миксин для кнопки с вопросом
+ 1) связь в спойлере;
+ 2) в модалке кнопка (непонято для чего); 
+ 3) в хедере при hover выпадает меню; 
+ 4) focus active для всех добавить; 
+ 5) сделать так, чтобы лишние скрипты не работали на мобилках
+ 6) дизейбл кнопок (стрелок) в табах
+ 7) в логике convenience не нравится, что использую setTimeout. Нужно попробовать отрисовывать точки внутри класса
+ 8) fixedHeader, changeColorSideMenu учитывать, что высота экрана может меняться
+ 9) fixedHeader, changeColorSideMenu оптимизация 
+ 10) проверить хлебные крошки и мобильное меню на переполнение и вск остальное
+ 11) ругается stylelint
+ 12) размытые картинки
+ 13) чтобы на одном разрешение у всех слайдеров убирались стрелки
+ 14) попробовать controls позиционирвоать не на абсолюте + в слайдере постараться не дублировать стили (сделать примерно как в других решениях на странице товара)
+ 16) ДЛЯ product-projects и другие решения сделать что-то, чтобы не дублировать стили
+ 17) unique-quality и guarantee-block что-то придумать, чтобы не дублирвать стили
+ 18) сделать какой-то класс или миксин для кнопки с вопросом
 -->
 
 <h1 class="sr-only">Фабрика Zetta — производство кухонь!</h1>
