--- a/src/html/pages/home-page/_blog-block.html
+++ b/src/html/pages/home-page/_blog-block.html
@@ -10,42 +10,42 @@
                         <picture>
                             <source srcset="img/blocks/blog/1.avif" type="image/avif">
                             <source srcset="img/blocks/blog/1.webp" type="image/webp">
-                            <img class="blog-block__img" src="img/blocks/blog/1.jpg" alt="девушка" width="250" height="190" loading="lazy">
+                            <img class="blog-block__img" src="img/blocks/blog/1.jpg" alt="девушка" loading="lazy">
                         </picture>
                     </div>
                     <div class="blog-block__image">
                         <picture>
                             <source srcset="img/blocks/facades-production/big.avif" type="image/avif">
                             <source srcset="img/blocks/facades-production/big.webp" type="image/webp">
-                            <img class="blog-block__img" src="img/blocks/facades-production/big.jpg" alt="Производство" width="250" height="190" loading="lazy">
+                            <img class="blog-block__img" src="img/blocks/facades-production/big.jpg" alt="Производство" loading="lazy">
                         </picture>
                     </div>
                     <div class="blog-block__image">
                         <picture>
                             <source srcset="img/blocks/products/kitchens/verona.avif" type="image/avif">
                             <source srcset="img/blocks/products/kitchens/verona.webp" type="image/webp">
-                            <img class="blog-block__img" src="img/blocks/products/kitchens/verona.jpg" alt="девушка" width="250" height="190" loading="lazy">
+                            <img class="blog-block__img" src="img/blocks/products/kitchens/verona.jpg" alt="девушка" loading="lazy">
                         </picture>
                     </div>
                     <div class="blog-block__image">
                         <picture>
                             <source srcset="img/blocks/blog/1.avif" type="image/avif">
                             <source srcset="img/blocks/blog/1.webp" type="image/webp">
-                            <img class="blog-block__img" src="img/blocks/blog/1.jpg" alt="девушка" width="250" height="190" loading="lazy">
+                            <img class="blog-block__img" src="img/blocks/blog/1.jpg" alt="девушка" loading="lazy">
                         </picture>
                     </div>
                     <div class="blog-block__image">
                         <picture>
                             <source srcset="img/blocks/facades-production/big.avif" type="image/avif">
                             <source srcset="img/blocks/facades-production/big.webp" type="image/webp">
-                            <img class="blog-block__img" src="img/blocks/facades-production/big.jpg" alt="Производство" width="250" height="190" loading="lazy">
+                            <img class="blog-block__img" src="img/blocks/facades-production/big.jpg" alt="Производство" loading="lazy">
                         </picture>
                     </div>
                     <div class="blog-block__image">
                         <picture>
                             <source srcset="img/blocks/products/kitchens/verona.avif" type="image/avif">
                             <source srcset="img/blocks/products/kitchens/verona.webp" type="image/webp">
-                            <img class="blog-block__img" src="img/blocks/products/kitchens/verona.jpg" alt="девушка" width="250" height="190" loading="lazy">
+                            <img class="blog-block__img" src="img/blocks/products/kitchens/verona.jpg" alt="девушка" loading="lazy">
                         </picture>
                     </div>
                 </div>
