--- a/src/html/pages/home-page/convenience/_convenience.html
+++ b/src/html/pages/home-page/convenience/_convenience.html
@@ -35,7 +35,7 @@
                 @include('./_convenience-tabs.html', {
                 'title' : 'Австрийская фурнитура Grass',
                 'text' : ['Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов.', 'Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий.', 'Срок службы фурнитуры составляет более 25 лет.'],
-                'advantages' : ['Рассчитана на 65 000 открытий/закрытий', 'На срок службы от 25 лет'],
+                'advantages' : ['65 000 открытий/закрытий', 'На срок службы от 25 лет'],
                 'img' : '1',
                 'alt' : 'Фото 1'
                 })
