refactor size of image

--- a/src/html/pages/product-page/_product-about.html
+++ b/src/html/pages/product-page/_product-about.html
@@ -40,7 +40,7 @@
                     <picture>
                         <source srcset="img/blocks/product-about/1.avif" type="image/avif">
                         <source srcset="img/blocks/product-about/1.webp" type="image/webp">
-                        <img class="product-about__img" src="img/blocks/product-about/1.jpg" alt="Велла" width="1250" height="700">
+                        <img class="product-about__img" src="img/blocks/product-about/1.jpg" alt="Велла">
                     </picture>
                 </a>
             </li>
@@ -49,7 +49,7 @@
                     <picture>
                         <source srcset="img/blocks/product-about/2.avif" type="image/avif">
                         <source srcset="img/blocks/product-about/2.webp" type="image/webp">
-                        <img class="product-about__img" src="img/blocks/product-about/2.jpg" alt="Велла" width="1250" height="700">
+                        <img class="product-about__img" src="img/blocks/product-about/2.jpg" alt="Велла">
                     </picture>
                 </a>
             </li>
@@ -58,7 +58,7 @@
                     <picture>
                         <source srcset="img/blocks/product-about/1.avif" type="image/avif">
                         <source srcset="img/blocks/product-about/1.webp" type="image/webp">
-                        <img class="product-about__img" src="img/blocks/product-about/1.jpg" alt="Велла" width="1250" height="700">
+                        <img class="product-about__img" src="img/blocks/product-about/1.jpg" alt="Велла">
                     </picture>
                 </a>
             </li>
@@ -67,7 +67,7 @@
                     <picture>
                         <source srcset="img/blocks/product-about/2.avif" type="image/avif">
                         <source srcset="img/blocks/product-about/2.webp" type="image/webp">
-                        <img class="product-about__img" src="img/blocks/product-about/2.jpg" alt="Велла" width="1250" height="700">
+                        <img class="product-about__img" src="img/blocks/product-about/2.jpg" alt="Велла">
                     </picture>
                 </a>
             </li>
