--- a/src/html/pages/product-page/_quality-materials.html
+++ b/src/html/pages/product-page/_quality-materials.html
@@ -75,7 +75,7 @@
             <picture>
                 <source srcset="img/blocks/quality-materials/1.avif" type="image/avif">
                 <source srcset="img/blocks/quality-materials/1.webp" type="image/webp">
-                <img class="quality-materials__img" src="img/blocks/quality-materials/1.jpg" alt="Кухня" width="1250" height="636" loading="lazy">
+                <img class="quality-materials__img" src="img/blocks/quality-materials/1.jpg" alt="Кухня" loading="lazy">
             </picture>
         </div>
         <ul class="quality-materials__items quality-materials__items--mobile">
