--- a/src/html/pages/home-page/_design-production.html
+++ b/src/html/pages/home-page/_design-production.html
@@ -18,7 +18,8 @@
                 Бесплатная консультация и замер помещения опытным дизайнером-технологом.
             </p>
         </div>
-        <button class="design-production__button button button--accent" type="button">
+        <button class="__button button" data-graph-path="" aria-controls="" type="button"></button>
+        <button class="design-production__button button button--accent" data-graph-path="order-project" aria-controls="modal-order-project" type="button">
             Получить дизайн проект
             <svg aria-hidden>
                 <use xlink:href="img/sprite.svg#arrows-double">
