--- a/src/html/pages/product-page/_product-about.html
+++ b/src/html/pages/product-page/_product-about.html
@@ -25,7 +25,7 @@
                     За кухню длиной 3 метра
                 </span>
             </div>
-            <button class="product-about__button product-about__button--desktop button button--accent" type="button">
+            <button class="product-about__button product-about__button--desktop button button--accent" data-graph-path="order-calc" aria-controls="modal-order-calc" type="button">
                 Онлайн просчет цены
                 <svg aria-hidden>
                     <use xlink:href="img/sprite.svg#arrows-double">
@@ -81,7 +81,7 @@
     </div>
     <div class="product-about__footer">
         <div class="product-about__pagination swiper-pagination"></div>
-        <button class="product-about__button product-about__button--mobile button button--accent" type="button">
+        <button class="product-about__button product-about__button--mobile button button--accent" data-graph-path="order-calc" aria-controls="modal-order-calc" type="button">
             Онлайн просчет цены
             <svg aria-hidden>
                 <use xlink:href="img/sprite.svg#arrows-double">
