refactor modal, add logo and typography scss files, add focus for logo

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,8 @@
 <!-- TODO: aria: 
  1) связь в спойлере;
  2) увеличить лого
+ 3) На мобилке пропало подчеркивание у хедера
+ 4) При открытом бургре меню фокус на закрыть 
  3) в каталоге только 2 карточки
  4) focus hover для всех добавить; 
  5) сделать так, чтобы лишние скрипты не работали на мобилках
