add focus and hoover for home page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,12 +7,11 @@
 })
 
 <!-- TODO: aria: 
+ 1) при открытом бурегр-меню что-то не так с overline
  1) связь в спойлере;
- 2) увеличить лого
- 3) На мобилке пропало подчеркивание у хедера
+ 4) При открытой модалке (с меню), бурегр-меню первыми на фокус должны быть элементы в них
  4) При открытом бургре меню фокус на закрыть 
  3) в каталоге только 2 карточки
- 4) focus hover для всех добавить; 
  5) сделать так, чтобы лишние скрипты не работали на мобилках
  6) дизейбл кнопок (стрелок) в табах
  7) в логике convenience не нравится, что использую setTimeout. Нужно попробовать отрисовывать точки внутри класса
