--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,9 @@
  3) в каталоге только 2 карточки
  5) сделать так, чтобы лишние скрипты не работали на мобилках
  6) дизейбл кнопок (стрелок) в табах
+ 6) реализованные проекты плохо выглядят на мобилке, когда 1 карточка
  7) в логике convenience не нравится, что использую setTimeout. Нужно попробовать отрисовывать точки внутри класса
+ 7) в мобильном бургер-меню focus и hover на карточки
  8) fixedHeader, changeColorSideMenu учитывать, что высота экрана может меняться
  9) fixedHeader, changeColorSideMenu оптимизация 
  10) проверить хлебные крошки и мобильное меню на переполнение и вск остальное
