--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,21 +7,19 @@
 })
 
 <!-- TODO: aria: 
- 1) при открытом бурегр-меню что-то не так с overline
  1) связь в спойлере;
  4) При открытой модалке (с меню), бурегр-меню первыми на фокус должны быть элементы в них
  4) При открытом бургре меню фокус на закрыть 
  3) в каталоге только 2 карточки
  5) сделать так, чтобы лишние скрипты не работали на мобилках
  6) дизейбл кнопок (стрелок) в табах
- 6) реализованные проекты плохо выглядят на мобилке, когда 1 карточка
  7) в логике convenience не нравится, что использую setTimeout. Нужно попробовать отрисовывать точки внутри класса
  7) в мобильном бургер-меню focus и hover на карточки
+ 8) неактивная хлебная крошка может быть в фокусе
  8) fixedHeader, changeColorSideMenu учитывать, что высота экрана может меняться
  9) fixedHeader, changeColorSideMenu оптимизация 
  10) проверить хлебные крошки и мобильное меню на переполнение и вск остальное
  11) ругается stylelint
- 12) размытые картинки
  13) чтобы на одном разрешение у всех слайдеров убирались стрелки
  14) попробовать controls позиционирвоать не на абсолюте + в слайдере постараться не дублировать стили (сделать примерно как в других решениях на странице товара)
  16) ДЛЯ product-projects и другие решения сделать что-то, чтобы не дублировать стили
