add focus and hover for product page, refactor height for fullscrean blocks, refactor burger-menu

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,6 +7,9 @@
 })
 
 <!-- TODO: aria: 
+ 0) консультация дизайнера прыгает наверх (попробовать e.preventDefault())
+ 0) в карточке товара вопрос с подчеркиванием
+ 0) проверить все через скринридер
  1) связь в спойлере;
 2) При открытой модалке (с меню), бурегр-меню первыми на фокус должны быть элементы в них
 3) При открытом бургре меню фокус на закрыть 
