--- a/src/html/pages/home-page/_hero.html
+++ b/src/html/pages/home-page/_hero.html
@@ -1,4 +1,4 @@
-<section class="hero-home">
+<section class="hero-home" data-fullscreen>
     <div class="hero-home__side-bg" aria-hidden></div>
     <div class="hero-home__swiper swiper">
         <ul class="hero-home__items swiper-wrapper">
