--- a/src/html/pages/home-page/_video-reviews.html
+++ b/src/html/pages/home-page/_video-reviews.html
@@ -1,10 +1,21 @@
 <section class="video-reviews section">
     <div class="container">
-        <div class="video-reviews__wrapper">
-            <h2 class="video-reviews__title title">
+        <div class="swiper-header">
+            <h2 class="swiper-header__title title">
                 Видео-обзоры
             </h2>
-            <div class="video-reviews__swiper swiper">
+            <div class="swiper-header__controls">
+                <div class="swiper-pagination-fraction"></div>
+                <div class="swiper-header__buttons">
+                    <button class="video-reviews__button video-reviews__button--prev swiper-button-prev" type="button">
+                    </button>
+                    <button class="video-reviews__button video-reviews__button--next swiper-button-next" type="button">
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="swiper-outer">
+            <div class="swiper">
                 <ul class="video-reviews__items swiper-wrapper">
                     <li class="video-reviews__item swiper-slide">
                         <div class="video-reviews__card">
@@ -53,15 +64,6 @@
                     </li>
                 </ul>
                 <div class="swiper-pagination"></div>
-                <div class="video-reviews__controls">
-                    <div class="swiper-pagination-fraction"></div>
-                    <div class="video-reviews__buttons">
-                        <button class="video-reviews__button video-reviews__button--prev swiper-button-prev" type="button">
-                        </button>
-                        <button class="video-reviews__button video-reviews__button--next swiper-button-next" type="button">
-                        </button>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
