--- a/home.html
+++ b/home.html
@@ -3,9 +3,9 @@
         <a href="index.html">Главная</a>
     </li>
     <li>
-        <a href="catalog.html">Страница каталог</a>
+        <a href="catalog.html">Страница каталога</a>
     </li>
-    <!-- <li>
+    <li>
         <a href="product.html">Страница товара</a>
-    </li> -->
+    </li>
 </ul>
