--- a/src/html/pages/home-page/_video-reviews.html
+++ b/src/html/pages/home-page/_video-reviews.html
@@ -5,7 +5,7 @@
                 Видео-обзоры
             </h2>
             <div class="swiper-header__controls">
-                <div class="swiper-pagination-fraction"></div>
+                <div class="video-reviews__fraction swiper-pagination-fraction"></div>
                 <div class="swiper-header__buttons">
                     <button class="video-reviews__button video-reviews__button--prev swiper-button-prev" type="button">
                     </button>
@@ -14,57 +14,55 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-outer">
-            <div class="swiper">
-                <ul class="video-reviews__items swiper-wrapper">
-                    <li class="video-reviews__item swiper-slide">
-                        <div class="video-reviews__card">
-                            <div class="video-reviews__video"></div>
-                            <div class="video-reviews__content">
-                                <h3 class="video-reviews__subtitle">
-                                    Как выбрать фурнитуру и корпус?
-                                </h3>
-                                <div class="video-reviews__text">
-                                    <p>
+        <div class="video-reviews__swiper swiper">
+            <ul class="video-reviews__items swiper-wrapper">
+                <li class="video-reviews__item swiper-slide">
+                    <div class="video-reviews__card">
+                        <div class="video-reviews__video"></div>
+                        <div class="video-reviews__content">
+                            <h3 class="video-reviews__subtitle">
+                                Как выбрать фурнитуру и корпус?
+                            </h3>
+                            <div class="video-reviews__text">
+                                <p>
                                         Рассказываем о главных критериях на примере кухни “Вектор”.
                                     </p>
-                                </div>
                             </div>
                         </div>
-                    </li>
-                    <li class="video-reviews__item swiper-slide">
-                        <div class="video-reviews__card">
-                            <div class="video-reviews__video"></div>
-                            <div class="video-reviews__content">
-                                <h3 class="video-reviews__subtitle">
-                                    Как выбрать фурнитуру и корпус?
-                                </h3>
-                                <div class="video-reviews__text">
-                                    <p>
+                    </div>
+                </li>
+                <li class="video-reviews__item swiper-slide">
+                    <div class="video-reviews__card">
+                        <div class="video-reviews__video"></div>
+                        <div class="video-reviews__content">
+                            <h3 class="video-reviews__subtitle">
+                                Как выбрать фурнитуру и корпус?
+                            </h3>
+                            <div class="video-reviews__text">
+                                <p>
                                         Рассказываем о главных критериях на примере кухни “Вектор”.
                                     </p>
-                                </div>
                             </div>
                         </div>
-                    </li>
-                    <li class="video-reviews__item swiper-slide">
-                        <div class="video-reviews__card">
-                            <div class="video-reviews__video"></div>
-                            <div class="video-reviews__content">
-                                <h3 class="video-reviews__subtitle">
-                                    Как выбрать фурнитуру и корпус?
-                                </h3>
-                                <div class="video-reviews__text">
-                                    <p>
+                    </div>
+                </li>
+                <li class="video-reviews__item swiper-slide">
+                    <div class="video-reviews__card">
+                        <div class="video-reviews__video"></div>
+                        <div class="video-reviews__content">
+                            <h3 class="video-reviews__subtitle">
+                                Как выбрать фурнитуру и корпус?
+                            </h3>
+                            <div class="video-reviews__text">
+                                <p>
                                         Рассказываем о главных критериях на примере кухни “Вектор”.
                                     </p>
-                                </div>
                             </div>
                         </div>
-                    </li>
-                </ul>
-                <div class="swiper-pagination"></div>
-            </div>
+                    </div>
+                </li>
+            </ul>
+            <div class="video-reviews__pagination swiper-pagination"></div>
         </div>
     </div>
 </section>
