--- a/src/html/pages/home-page/convenience/_convenience-tabs.html
+++ b/src/html/pages/home-page/convenience/_convenience-tabs.html
@@ -16,7 +16,7 @@
         }
     </div>
     <div class="convenience__image">
-        <div class="convenience__points" aria-hidden>
+        <div class="tabs__points" aria-hidden>
 
         </div>
         <picture>
