--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,11 +8,11 @@
 
 <!-- TODO: aria: 
 0) проверить все через скринридер
+0) придумать что-то с главным экраном, на маленьком размере по высоте все ломается
 1) связь в спойлере;
 2) При открытой модалке (с меню), бурегр-меню первыми на фокус должны быть элементы в них
 3) При открытом бургре меню фокус на закрыть 
 4) сделать так, чтобы лишние скрипты не работали на мобилках
-5) неактивная хлебная крошка может быть в фокусе
 6) fixedHeader, changeColorSideMenu учитывать, что высота экрана может меняться
 7) fixedHeader, changeColorSideMenu оптимизация 
 8) проверить хлебные крошки и мобильное меню на переполнение и вск остальное
